--- a/lib/discuss_web/templates/topic/show.html.heex
+++ b/lib/discuss_web/templates/topic/show.html.heex
@@ -1,2 +1,5 @@
 
-<%= @topic.title%>
+<%= @topic.title %>
+
+<%= link("Edit", to: Routes.topic_path(@conn, :edit, @topic))%>
+<%= link("Delete", to: Routes.topic_path(@conn, :delete, @topic))%>
