--- a/lib/discuss_web/templates/topic/form.html.heex
+++ b/lib/discuss_web/templates/topic/form.html.heex
@@ -4,5 +4,5 @@
     <%= error_tag f, :title %>
   </div>
 
-  <%= submit "Save Topic", class: "btn btn-primary" %>
+  <%= submit "Save/Create Topic", class: "btn btn-primary" %>
 <% end %>
